# ngpt-mlip

./: .gitignore  README.md  hello.py  pyproject.toml  qm9_schnet_pretrained.py  train.py  train_playground.ipynb
cbp/: cbp_linear.py  data.py  model.py  train.py  train_model.ipynb
